Closed
Bug 255466
Opened 21 years ago
Closed 21 years ago
Account option to check for new messages every XXX minutes does not work for RSS feeds
Categories
(MailNews Core :: Feed Reader, defect)
MailNews Core
Feed Reader
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugs, Assigned: mscott)
Details
Attachments
(1 file)
|
5.26 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040707 Firefox/0.9.2
Build Identifier: Thunderbird version 0.7+ (20040811)
When the account option to check for new messages is set, Thunderbird does not
check for new messages on the feeds when the time has elapsed.
Automatic checking of feeds is even more important than email accounts, as they
are a dynamic data source. As new articles are posted on the site, older ones
disappear from the feed and cannot be recovered later.
Reproducible: Always
Steps to Reproduce:
1. Subscribe to a frequently updated news source, such as BBC World News
(http://news.bbc.co.uk/rss/newsonline_world_edition/front_page/rss091.xml).
2. Set the account option "Check for new messages every X minutes" to something
small.
Actual Results:
Even after the time has expired, no items will be downloaded.
The new items will only be downloaded by right-clicking on the account and
selecting "Get new messages".
Expected Results:
Check for new messages every XXX minutes, as requested.
Comment 1•21 years ago
|
||
confirming, I can repro this using 2004081205-0.8 on linux fedora core 2.
1. in the Account Settings for the RSS acct, I selected "Check for new articles
every 5 minutes."
2. added a feed to http://del.icio.us/rss which changes frequently.
3. wait 5 minutes (or more) and look at the article listing in the thread pane.
actual results: there are no changes to the article listing in the thread pane.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → All
Hardware: PC → All
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Thunderbird0.8
| Assignee | ||
Comment 2•21 years ago
|
||
| Assignee | ||
Comment 3•21 years ago
|
||
fixed
although we don't show the new mail alert yet and the folder isn't getting a red
icon next to it when it has new mail but that can be done later.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 4•20 years ago
|
||
(In reply to comment #3)
> fixed
>
reproduced on tb 1.5 rc 2 with 2 min and 5 min freq using http://del.icio.us/rss and http://news.bbc.co.uk/rss/newsonline_world_edition/front_page/rss.xml#
Thunderbird version 1.5 (20051201)
during testday 2005-12-13
transcript:
13:20]<Storkman> rss test 6 b - I don't seem to be getting automatic updates of rss feeds (i.e.: if i look at the feed in ff there are articles that tb has not displayed yet) ref bug 255466
[13:20]<Storkman> i set my update frequency to 2 min though
[13:21]<Storkman> i'm trying again with a freq of 5 min
[13:21]<Storkman> feed is del.icio.us
[13:23]<davel> hi storkman - what os are you running?
[13:23]<Storkman> win xp sp2
[13:24]<davel> storkman, do you have a packet sniffer (like ethereal - www.ethereal.com)
[13:24]<davel> I think it might be interesting to see if Tb is fetching the feed at all . . .
[13:25]<Storkman> no packet sniffer
[13:25]<Storkman> 6 min since i changed freq to 5 min
[13:25]<Storkman> ctrl - t (manual update) sucked down 30 more articles
[13:26]<marcia> Storkman: Is del.icio.us the only feed you have?
[13:27]<davel> hmmm.
[13:27]<Storkman> i also have 2 others
[13:27]<Storkman> the burning edge and mozillazine feedhouse
[13:29]<marcia> Storkman: I have seen instances where some feeds are problematic and other are not
[13:30]<Storkman> can you suggest another frequently updated feed?
[13:31]<Storkman> am trying with bbc feed i found in the original bug
[13:31]<Storkman> 5 min auto-refresh
[13:31]<Storkman> 29 articles to start with...
[13:39]<marcia> Storkman: hold on I will get you one
[13:40]<Storkman> same results with bbc feed
[13:40]<Storkman> these are the two feeds (del.ico.us and bbc) that were referred to in the original bug
[13:42]<marcia> Some of the yahoo feeds refresh frequently, but not as frequently as delicious - http://rss.news.yahoo.com/rss/topstories
Comment 5•17 years ago
|
||
I have verified this is still a problem with Thunderbird 2.0.0.17 on Windows XP.
Component: RSS → Feed Reader
Product: Thunderbird → MailNews Core
Target Milestone: Thunderbird0.8 → ---
Updated•16 years ago
|
Version: unspecified → Trunk
You need to log in
before you can comment on or make changes to this bug.
Description
•