Bug #255466 --> Hook up "checking for new feeds every XXX minutes" in Thunderbird.